Add support for db querying and creating user

--- a/FirstProject/nodetest1/public/views/nav.html
+++ b/FirstProject/nodetest1/public/views/nav.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default" role="navigation">
+<div class="navbar navbar-inverse" role="navigation">
 	<div class="container-fluid">
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarCollapse" >
@@ -11,8 +11,8 @@
 	</div>
 	<div class="collapse navbar-collapse" id="navbarCollapse">
 		<ul class="nav navbar-nav navbar-right">
-			<li> <a href="/login">Login</a></li>
-			<li> <a href="/Register">Register</a></li>
+			<li> <a href="#/login">Login</a></li>
+			<li> <a href="#/register">Register</a></li>
 		</ul>
 	</div> <!-- /.navbar-collapse -->
 	</div> <!-- /.container-fluid -->
