--- a/FirstProject/nodetest1/public/views/login.html
+++ b/FirstProject/nodetest1/public/views/login.html
@@ -3,7 +3,7 @@
 <form ng-submit='login()'>
 	<div class="form-group">
 		<label for="email"> Email Address</label>
-		<input type="email" class="form-control" ng-model='user.email' id="email" placeholder="Enter email">
+		<input type="email" class="form-control" ng-model='user.username' id="email" placeholder="Enter email">
 	</div>
 	<div class="form-group">
 		<label for="password"> Password</label>
