--- a/FirstProject/nodetest1/public/views/register.html
+++ b/FirstProject/nodetest1/public/views/register.html
@@ -1,12 +1,12 @@
-<div class="container page-center">
-<form>
+<div class="container page-center" ng-controller='AuthController'>
+<form ng-submit='register()'>
 	<div class="form-group">
 		<label for="email"> Email Address</label>
-		<input type="email" class="form-control" id="email" placeholder="Enter email">
+		<input type="email" class="form-control" id="email" ng-model='user.username' placeholder="Enter email">
 	</div>
 	<div class="form-group">
 		<label for="password"> Password</label>
-		<input type="password" class="form-control" id="password" placeholder="Password">
+		<input type="password" class="form-control" ng-model='user.password' id="password" placeholder="Password">
 	</div>
 	<button class="btn btn-default" type="submit">Submit</button>
 </form>
