--- a/FirstProject/nodetest1/public/css/main.css
+++ b/FirstProject/nodetest1/public/css/main.css
@@ -12,17 +12,30 @@
 	overflow : hidden;
 }
 
-html,body{
-	height:100%;
-	overflow: hidden;
+.post-header{
+	padding-top:8px;
+	padding-bottom:8px;
+	border: 1px solid #e0e0e0;
+	text-align: center;
+	font-size: 32px;
 }
-.container-fluid,.container,.row,.row-fluid{
-	height:100%;
+
+.content-view{
+	margin-top:64px;
+	height:70vh;
 }
-.my-elem{
-	height:100%;
-	min-height: 100%;
-	overflow:auto;
+.content-title{
+	display:block;
+	width:100%;
+	font-size:24px;
+	padding-left:8px;
+}
+.content-description{
+	height:70%;
+	width:100%;
+	padding-left:8px;
+	max-width: 100%;
+	max-height: 70%
 }
 
 
