--- a/FirstProject/nodetest1/public/views/nav.html
+++ b/FirstProject/nodetest1/public/views/nav.html
@@ -7,11 +7,11 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="/#/">HeartFelt</a>
+		<a class="navbar-brand" ui-sref="home">HeartFelt</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbarCollapse">
 		<ul class="nav navbar-nav navbar-right">
-			<li> <a href="#/login">Login</a></li>
+			<li> <a ui-sref="login">Login</a></li>
 			<li> <a href="#/register">Register</a></li>
 		</ul>
 	</div> <!-- /.navbar-collapse -->
