--- a/FirstProject/nodetest1/public/views/post.html
+++ b/FirstProject/nodetest1/public/views/post.html
@@ -1,15 +1,17 @@
-<div class="container">
-	<div class="row-fluid">
-		<div class="col-xs-6 col-md-4 my-elem">
-		<div class="row">
-			<ul class="list-group my-elem" id="post-column">
-				<li class="list-group-item " style="padding-top:30px ; padding-bottom:30px" ng-repeat='x in posts track by $index'> {{x}}</li>
-			</ul>
-			</div>
+<div class="container-fluid" style="border:1px solid #e0e0e0; background:#e0e0e0" >
+	<div class="col-xs-6 col-md-4" style="height:80vh;">
+		<div class="post-header">
+			Posts
 		</div>
+		<div style="height:70vh;overflow:auto; border: 1px solid #e0e0e0;">
+			<ul class="list-group" style="margin-bottom:0px" >
+				<li ng-repeat='x in posts track by $index' class="list-group-item" style="padding-bottom:16px;padding-top:16px;">
+					<a ui-sref=".content({id: '{{x._id}}'})">{{x.title}}</a>
+				</li>
+			</ul>
 
-		<div class="col-xs-6 col-md-8">
-			Stealing the space
 		</div>
 	</div>
+	<div class="col-xs-6 col-md-8">
+		<div ui-view></div>
 </div>
