--- a/FirstProject/nodetest1/public/views/register.html
+++ b/FirstProject/nodetest1/public/views/register.html
@@ -1,13 +1,21 @@
 <div class="container page-center" ng-controller='AuthController'>
-<form ng-submit='register()'>
-	<div class="form-group">
-		<label for="email"> Email Address</label>
-		<input type="email" class="form-control" id="email" ng-model='user.username' placeholder="Enter email">
+	<div class="page-header">
+		<h1> HeartFelt</h1>
 	</div>
-	<div class="form-group">
-		<label for="password"> Password</label>
-		<input type="password" class="form-control" ng-model='user.password' id="password" placeholder="Password">
+
+	<div ng-show="error" class="alert alert-danger row">
+		{{error.message}}
 	</div>
-	<button class="btn btn-default" type="submit">Submit</button>
-</form>
+
+	<form ng-submit='register()'>
+		<div class="form-group">
+			<label for="email"> Email Address</label>
+			<input type="email" class="form-control" id="email" ng-model='user.username' placeholder="Enter email">
+		</div>
+		<div class="form-group">
+			<label for="password"> Password</label>
+			<input type="password" class="form-control" ng-model='user.password' id="password" placeholder="Password">
+		</div>
+		<button class="btn btn-default" type="submit">Submit</button>
+	</form>
 </div>
