--- a/FirstProject/nodetest1/public/css/main.css
+++ b/FirstProject/nodetest1/public/css/main.css
@@ -3,6 +3,10 @@
 	margin-bottom:150px;
 }
 
+body{
+	background: #e0e0e0;
+}
+
 .list-left{
 	height : 100%;
 	overflow : scroll ;
@@ -35,7 +39,8 @@
 	width:100%;
 	padding-left:8px;
 	max-width: 100%;
-	max-height: 70%
+	min-height: 70%;
+	font-size: 16px;
 }
 
 
