--- a/FirstProject/nodetest1/public/views/nav.html
+++ b/FirstProject/nodetest1/public/views/nav.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar navbar-inverse" role="navigation" ng-controller="NavController">
 	<div class="container-fluid">
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarCollapse" >
@@ -11,7 +11,8 @@
 	</div>
 	<div class="collapse navbar-collapse" id="navbarCollapse">
 		<ul class="nav navbar-nav navbar-right">
-			<li> <a ui-sref="login">Login</a></li>
+			<li ng-hide="loggedIn()"><a ui-sref="login">Login</a></li>
+			<li ng-hide="loggedIn()"><a ng-click="logout()" href="#">Logout</a></li>
 			<li> <a href="#/register">Register</a></li>
 		</ul>
 	</div> <!-- /.navbar-collapse -->
