--- a/FirstProject/nodetest1/public/views/post-content.html
+++ b/FirstProject/nodetest1/public/views/post-content.html
@@ -1,7 +1,7 @@
 <div class="content-view">
-	<form ng-submit='create()'>
+	<form  ng-submit='create()'>
 		<input class="content-title" type="text" value="{{post.title}}" style="border: 0px; border-bottom:1px solid #e0e0e0">
 		<textarea class="content-description" type="text" ng-bind='post.content' style="border:0px;"></textarea>
-		<button class="btn btn-alert">Save</button>
+		<button class="btn btn-warning" style="float:right">Save</button>
 	</form>
 </div>
