--- a/FirstProject/nodetest1/public/views/nav.html
+++ b/FirstProject/nodetest1/public/views/nav.html
@@ -12,7 +12,7 @@
 	<div class="collapse navbar-collapse" id="navbarCollapse">
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-hide="loggedIn()"><a ui-sref="login">Login</a></li>
-			<li ng-hide="loggedIn()"><a ng-click="logout()" href="#">Logout</a></li>
+			<li ng-show="loggedIn()"><a ng-click="logout()" href="#">Logout</a></li>
 			<li> <a href="#/register">Register</a></li>
 		</ul>
 	</div> <!-- /.navbar-collapse -->
