Add redirect on homepage when logged in

--- a/FirstProject/nodetest1/public/views/post-content.html
+++ b/FirstProject/nodetest1/public/views/post-content.html
@@ -1,4 +1,4 @@
-<div class="content-view">
+<div>
 	<form  ng-submit='handlePost()'>
 		<input class="content-title" type="text" placeholder="Untitled" ng-model='currpost.title' style="border: 0px; border-bottom:1px solid #e0e0e0">
 		<textarea class="content-description" type="text" placeholder="Description" ng-model='currpost.content' style="border:0px;"></textarea>
