--- a/FirstProject/nodetest1/public/views/post.html
+++ b/FirstProject/nodetest1/public/views/post.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" style="border:1px solid #e0e0e0; background:#e0e0e0" >
 	<div class="col-xs-6 col-md-4" style="height:80vh;">
 		<div class="post-header">
-			Posts <button class="btn btn-default" ng-click='clearPost()'>New Post</button>
+			Posts <button class="btn btn-default" ng-click='clearPost()' style="float:right;">New Post</button>
 		</div>
 		<div style="height:70vh;overflow:auto; border: 1px solid #e0e0e0;">
 			<ul class="list-group" style="margin-bottom:0px" >
