--- a/FirstProject/nodetest1/public/css/main.css
+++ b/FirstProject/nodetest1/public/css/main.css
@@ -5,6 +5,10 @@
 
 body{
 	background: #e0e0e0;
+	height:100%;
+}
+html{
+	height:100%;
 }
 
 .list-left{
@@ -17,9 +21,6 @@ body{
 }
 
 .post-header{
-	padding-top:8px;
-	padding-bottom:8px;
-	border: 1px solid #e0e0e0;
 	text-align: center;
 	font-size: 32px;
 }
@@ -31,12 +32,23 @@ body{
 	padding-left:8px;
 }
 .content-description{
-	height:70%;
+	height:100%;
 	width:100%;
 	padding-left:8px;
 	max-width: 100%;
-	min-height: 70%;
+	min-height: 100%;
 	font-size: 16px;
 }
+.post-list{
+	height : 50%;
+	overflow : auto;
+}
 
+.post-content{
+	height:50%;
+	overflow:auto;
+}
 
+.full-height{
+	height:100%;
+}
