--- a/FirstProject/nodetest1/public/views/post.html
+++ b/FirstProject/nodetest1/public/views/post.html
@@ -1,17 +1,25 @@
-<div class="container-fluid" style="border:1px solid #e0e0e0; background:#e0e0e0" >
-	<div class="col-xs-6 col-md-4" style="height:80vh;">
-		<div class="post-header">
-			Posts <button class="btn btn-default" ng-click='clearPost()' style="float:right;">New Post</button>
-		</div>
-		<div style="height:70vh;overflow:auto; border: 1px solid #e0e0e0;">
-			<ul class="list-group" style="margin-bottom:0px" >
-				<li ng-repeat='x in posts track by $index' class="list-group-item" style="padding-bottom:16px;padding-top:16px;">
-					<a ng-click='setPost(x)' >{{x.title}}</a>
-				</li>
-			</ul>
-
+<div class="container-fluid" style="border:1px solid #e0e0e0; background:#e0e0e0; height:100%" >
+	<div class="row">
+		<div class="col-xs-6 col-md-4">
+			<div class="post-header">
+				Posts <button class="btn btn-default" ng-click='clearPost()' style="float:right;">New Post</button>
+			</div>
 		</div>
 	</div>
-	<div class="col-xs-6 col-md-8">
-		<div ng-include="'views/post-content.html'"></div>
+	<div class="row" style="height:100%">
+		<div class="col-xs-6 col-md-4" style="height:100%">
+			<div class="post-list">
+				<ul class="list-group">
+					<li ng-repeat='x in posts track by $index' class="list-group-item" style="padding-bottom:16px;padding-top:16px;">
+						<a ng-click='setPost(x)' >{{x.title}}</a>
+					</li>
+				</ul>
+			</div>
+
+		</div>
+		<div class="col-xs-6 col-md-8 full-height">
+			<div class="full-height" ng-include="'views/post-content.html'"></div>
+		</div>
+	</div>
+
 </div>
