--- a/FirstProject/nodetest1/public/css/main.css
+++ b/FirstProject/nodetest1/public/css/main.css
@@ -4,11 +4,16 @@
 }
 
 body{
-	background: #e0e0e0;
+	background: #EEEEEE;
 	height:100%;
 }
 html{
 	height:100%;
+}
+
+.nav-background{
+	background:#00BCD4;
+	color:#FFFFFF;
 }
 
 .list-left{
@@ -25,30 +30,51 @@ html{
 	font-size: 32px;
 }
 
-.content-title{
-	display:block;
-	width:100%;
-	font-size:24px;
-	padding-left:8px;
-}
+
 .content-description{
-	height:100%;
+	height:80%;
 	width:100%;
 	padding-left:8px;
 	max-width: 100%;
-	min-height: 100%;
+	min-height: 80%;
 	font-size: 16px;
+	border:0px;
 }
 .post-list{
 	height : 50%;
 	overflow : auto;
+
 }
 
 .post-content{
 	height:50%;
 	overflow:auto;
 }
+.post-content-title{
+	display:block;
+	width:100%;
+	font-size:24px;
+	padding-left:8px;
+	border: 0px; 
+	border-bottom:1px solid #e0e0e0;
+}
+
 
 .full-height{
 	height:100%;
+}
+
+.glyphicon.glyphicon-pencil {
+	font-size:32px;
+}
+
+.post-container{
+	height:100%;
+}
+.post-group{
+	background: #FAFAFA;
+}
+
+.post-group-item{
+	background:#FAFAFA;
 }
