--- a/FirstProject/nodetest1/public/views/nav.html
+++ b/FirstProject/nodetest1/public/views/nav.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse" role="navigation" ng-controller="NavController">
+<div class="navbar navbar-default" role="navigation" ng-controller="NavController">
 	<div class="container-fluid">
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarCollapse" >
