--- a/FirstProject/nodetest1/public/views/post-content.html
+++ b/FirstProject/nodetest1/public/views/post-content.html
@@ -1,7 +1,7 @@
 <div class="full-height">
 	<form class="post-content" ng-submit='handlePost()'>
-		<input class="content-title" type="text" placeholder="Untitled" ng-model='currpost.title' style="border: 0px; border-bottom:1px solid #e0e0e0">
-		<textarea class="content-description" type="text" placeholder="Description" ng-model='currpost.content' style="border:0px;"></textarea>
+		<input class="post-content-title" type="text" placeholder="Untitled" ng-model='currpost.title' >
+		<textarea class="content-description" type="text" placeholder="Description" ng-model='currpost.content'></textarea>
 		<button class="btn btn-warning" style="float:right">Save</button>
 	</form>
 </div>
