--- a/FirstProject/nodetest1/public/css/main.css
+++ b/FirstProject/nodetest1/public/css/main.css
@@ -31,15 +31,7 @@ html{
 }
 
 
-.content-description{
-	height:80%;
-	width:100%;
-	padding-left:8px;
-	max-width: 100%;
-	min-height: 80%;
-	font-size: 16px;
-	border:0px;
-}
+
 .post-list{
 	height : 50%;
 	overflow : auto;
@@ -48,7 +40,6 @@ html{
 
 .post-content{
 	height:50%;
-	overflow:auto;
 }
 .post-content-title{
 	display:block;
@@ -57,6 +48,15 @@ html{
 	padding-left:8px;
 	border: 0px; 
 	border-bottom:1px solid #e0e0e0;
+}
+.content-description{
+	height:70%;
+	width:100%;
+	padding-left:8px;
+	max-width: 100%;
+	max-height: 100%;
+	font-size: 16px;
+	border:0px;
 }
 
 
