--- a/FirstProject/nodetest1/public/views/nav.html
+++ b/FirstProject/nodetest1/public/views/nav.html
@@ -13,7 +13,7 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-hide="loggedIn()"><a ui-sref="login">Login</a></li>
 			<li ng-show="loggedIn()"><a ng-click="logout()" href="#">Logout</a></li>
-			<li> <a href="#/register">Register</a></li>
+			<li ng-hide="loggedIn()"> <a href="#/register">Register</a></li>
 		</ul>
 	</div> <!-- /.navbar-collapse -->
 	</div> <!-- /.container-fluid -->
