--- a/FirstProject/nodetest1/public/views/post.html
+++ b/FirstProject/nodetest1/public/views/post.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-xs-6 col-md-4">
 			<div class="post-header">
-				Posts <button class="btn btn-default"><span class="glyphicon glyphicon-pencil" ng-click='newPost()' style="float:right;"></span></button>
+				Posts <button class="btn btn-default" style="float:right;"><span class="glyphicon glyphicon-pencil" ng-click='newPost()' ></span></button>
 			</div>
 		</div>
 	</div>
