--- a/FirstProject/nodetest1/public/views/home.html
+++ b/FirstProject/nodetest1/public/views/home.html
@@ -1,3 +1,4 @@
-<div class="jumbotron text-center page-center">
-	<h1> Welcome to Heartfelt </h1>
+<div class="home-background">
+	<div class="header text-center">
+		<h2 style="color: #FFFFFF;">Welcome to Heartfelt</h2></div>
 </div>
