--- a/FirstProject/nodetest1/public/views/login.html
+++ b/FirstProject/nodetest1/public/views/login.html
@@ -1,21 +1,21 @@
 <!-- public/views/login.html-->
-<div class="container page-center" ng-controller="AuthController">
-<div class="page-header">
-	<h1> HeartFelt</h1>
+<div class="page-center login-background" ng-controller="AuthController">
+<div class="logo-header">
+	<h1 class="text-center">HeartFelt</h1>
 </div>
 
 <div ng-show="error" class="alert alert-danger row">
 	{{error.message}}
 </div>
-<form ng-submit='login()'>
-	<div class="form-group">
+<form class="login-form" ng-submit='login()'>
+	<div class="form-group form-input-field">
 		<label for="email"> Email Address</label>
 		<input type="email" class="form-control" ng-model='user.username' id="email" placeholder="Enter email">
 	</div>
-	<div class="form-group">
-		<label for="password"> Password</label>
+	<div class="form-group form-input-field">
+		<label for="password">Password</label>
 		<input type="password" class="form-control" ng-model='user.password' id="password" placeholder="Password">
 	</div>
-	<button class="btn btn-default" type="submit">Submit</button>
+	<button class="btn btn-warning form-input-field" style="display:block;" type="submit">Login</button>
 </form>
 </div>
