--- a/FirstProject/nodetest1/public/views/home.html
+++ b/FirstProject/nodetest1/public/views/home.html
@@ -1,4 +1,19 @@
 <div class="home-background">
-	<div class="header text-center">
-		<h2 style="color: #FFFFFF;">Welcome to Heartfelt</h2></div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-6 col-md-9 col-md-offset-1">
+				<div class="home-content" style="color:#FFFFFF; padding-top:13%; font-family:Roboto;">
+					
+						<div style="margin-bottom:24px">
+							<span style="font-size:5.6em; font-weight:800;">Any note, Anywhere </span>
+							<p style="font-size:1.25em">Keep track of the content you love in your own space, Free.</p>
+							
+						</div>
+
+						<button class="btn btn-warning btn-block" style="max-width:305px; font-size:20px"> Get Started </button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 </div>
