--- a/FirstProject/nodetest1/public/views/login.html
+++ b/FirstProject/nodetest1/public/views/login.html
@@ -1,5 +1,6 @@
 <!-- public/views/login.html-->
 <div class="page-center login-background" ng-controller="AuthController">
+<div class="inner-login-background">
 <div class="logo-header">
 	<h1 class="text-center">HeartFelt</h1>
 </div>
@@ -18,4 +19,5 @@
 	</div>
 	<button class="btn btn-warning form-input-field" style="display:block;" type="submit">Login</button>
 </form>
+</div>
 </div>
