--- a/FirstProject/nodetest1/public/views/register.html
+++ b/FirstProject/nodetest1/public/views/register.html
@@ -1,4 +1,5 @@
 <div class="page-center login-background" ng-controller="AuthController">
+<div class="inner-login-background">
 <div class="logo-header">
 	<h1 class="text-center">HeartFelt</h1>
 </div>
@@ -17,4 +18,5 @@
 	</div>
 	<button class="btn btn-warning form-input-field" style="display:block;" type="submit">Register</button>
 </form>
+</div>
 </div>
