--- a/FirstProject/nodetest1/public/views/nav.html
+++ b/FirstProject/nodetest1/public/views/nav.html
@@ -7,7 +7,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" ui-sref="home">HeartFelt</a>
+		<a class="navbar-brand" id="hf-brand" ui-sref="home">HeartFelt</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbarCollapse">
 		<ul class="nav navbar-nav navbar-right">
