FIX Button to match theme

--- a/FirstProject/nodetest1/public/css/colors.css
+++ b/FirstProject/nodetest1/public/css/colors.css
@@ -2,6 +2,10 @@
 	color : #683AB7 !important;
 }
 
+.primary-color500-background{
+	background-color : #683AB7 !important;
+}
+
 .primary-color-light{
 	color: #AD89ED;
 }
