--- a/FirstProject/nodetest1/public/views/home.html
+++ b/FirstProject/nodetest1/public/views/home.html
@@ -10,7 +10,7 @@
 							
 						</div>
 
-						<button class="btn btn-warning btn-block" style="max-width:305px; font-size:20px"> Get Started </button>
+						<button class="btn btn-block primary-color500-background" style="max-width:305px; font-size:20px"> Get Started </button>
 				</div>
 			</div>
 		</div>
