--- a/FirstProject/nodetest1/public/css/main.css
+++ b/FirstProject/nodetest1/public/css/main.css
@@ -12,7 +12,9 @@ html{
 
 .navbar{
 	margin-bottom:0px;
+	box-shadow: 0px 4px 4px -2px #888888;
 }
+
 
 .nav-background{
 	background:#00BCD4;
@@ -32,57 +34,11 @@ html{
 	overflow : hidden;
 }
 
-.post-header{
-	text-align: center;
-	font-size: 32px;
-	padding-bottom:8px;
-}
-
-
-
-.post-list{
-	height : 50%;
-	overflow : auto;
-
-}
-
-.post-content{
-	height:50%;
-}
-.post-content-title{
-	display:block;
-	width:100%;
-	font-size:24px;
-	padding-left:8px;
-	border: 0px; 
-	border-bottom:1px solid #e0e0e0;
-}
-.content-description{
-	height:70%;
-	width:100%;
-	padding-left:8px;
-	max-width: 100%;
-	max-height: 100%;
-	font-size: 16px;
-	border:0px;
-}
-
-
 .full-height{
 	height:100%;
 }
 
-.glyphicon.glyphicon-pencil {
-	font-size:24px;
+.Roboto-font{
+	font-family: Roboto sans-serif;
 }
 
-.post-container{
-	height:100%;
-}
-.post-group{
-	background: #FAFAFA;
-}
-
-.post-group-item{
-	background:#FAFAFA;
-}
