--- a/FirstProject/nodetest1/public/views/login.html
+++ b/FirstProject/nodetest1/public/views/login.html
@@ -17,7 +17,7 @@
 		<label for="password">Password</label>
 		<input type="password" class="form-control" ng-model='user.password' id="password" placeholder="Password">
 	</div>
-	<button class="btn btn-warning form-input-field" style="display:block;" type="submit">Login</button>
+	<button class="btn form-input-field primary-color500-background white" style="display:block;" type="submit">Login</button>
 </form>
 </div>
 </div>
