--- a/FirstProject/nodetest1/public/views/post.html
+++ b/FirstProject/nodetest1/public/views/post.html
@@ -1,4 +1,4 @@
-<div class="container-fluid post-container" >
+<!-- <div class="container-fluid post-container" >
 	<div class="row">
 		<div class="col-xs-6 col-md-4">
 			<div class="post-header">
@@ -6,8 +6,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="row" style="height:100%">
-		<div class="col-xs-6 col-md-4" style="height:100%">
+	<div class="row">
+		<div class="col-xs-6 col-md-4">
 			<div class="post-list">
 				<ul class="list-group post-group">
 					<li ng-repeat='x in posts track by $index' class="list-group-item post-group-item" style="padding-bottom:16px;padding-top:16px;">
@@ -22,4 +22,32 @@
 		</div>
 	</div>
 
+</div> <!-->
+
+<div class="container page-center">
+	<div class="row" style="padding-bottom:8px;">
+		<div class="col-xs-6 col-md-4 col-md-offset-4">
+				<button class="new-note-wrapper btn accent-color-background white" ng-click="newPost()">
+					New Note
+				</button>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6 col-md-4">
+
+			<div class="post-list-wrapper">
+				<div class="post-header primary-color500 white-background">All notes</div>
+				<div class="post-list">
+					<ul class="list-group post-group">
+						<li ng-repeat='x in posts track by $index' class="list-group-item post-group-item" style="padding-bottom:16px;padding-top:16px;">
+							<a ng-click='setPost(x)' >{{x.title}}</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-6 col-md-8">
+			<div class="post-content" ng-include="'views/post-content.html'"></div>
+		</div>
+	</div> <!-- ./row -->
 </div>
